--- a/src/Mapbender/CoreBundle/Resources/translations/messages.de.xliff
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.de.xliff
@@ -134,6 +134,18 @@
         <source>No Users</source>
         <target>Keine Benutzer</target>
       </trans-unit>
+      <trans-unit id="34">
+        <source>Share POI</source>
+        <target>POI teilen</target>
+      </trans-unit>
+      <trans-unit id="35">
+        <source>Text</source>
+        <target>Text</target>
+      </trans-unit>
+      <trans-unit id="36">
+        <source>You can use the following snippet in an email to send the POI.</source>
+        <target>Sie können den folgenden Textbaustein in einer E-Mail nutzen, um den POI zu teilen.</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
