--- a/src/Mapbender/CoreBundle/Resources/translations/messages.en.xliff
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.en.xliff
@@ -134,6 +134,18 @@
         <source>No Users</source>
         <target>No Users</target>
       </trans-unit>
+      <trans-unit id="34">
+        <source>Share POI</source>
+        <target>Share POI</target>
+      </trans-unit>
+      <trans-unit id="35">
+        <source>Text</source>
+        <target>Text</target>
+      </trans-unit>
+      <trans-unit id="36">
+        <source>You can use the following snippet in an email to send the POI.</source>
+        <target>You can use the following snippet in an email to send the POI.</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
