--- a/src/Mapbender/CoreBundle/Resources/translations/messages.en.xliff
+++ b/src/Mapbender/CoreBundle/Resources/translations/messages.en.xliff
@@ -146,6 +146,10 @@
         <source>You can use the following snippet in an email to send the POI.</source>
         <target>You can use the following snippet in an email to send the POI.</target>
       </trans-unit>
+      <trans-unit id="37">
+        <source>mb.core.basesourceswitcher.form.mesage</source>
+        <target>Save first the element, then edit it</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
